[package]
name = "solve-waffle"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A solver for Waffle puzzles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "solve-waffle"
path = "src/main.rs"

[[bin]]
name = "solve-swap"
path = "src/swap_main.rs"

[[bin]]
name = "editor"
path = "src/editor.rs"

[dependencies]
gettext-rs = "0.7.0"
ncurses = "5.101.0"
