[package]
name = "vaflo"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A daily word game in Esperanto"
repository = "https://github.com/bpeel/vaflo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "solve-waffle"
path = "src/solve_waffle.rs"

[[bin]]
name = "solve-swap"
path = "src/swap_main.rs"

[[bin]]
name = "editor"
path = "src/editor.rs"

[[bin]]
name = "check-puzzles"
path = "src/check_puzzles.rs"

[[bin]]
name = "dump-words"
path = "src/dump_words.rs"

[[bin]]
name = "dump-dictionary"
path = "src/dump_dictionary.rs"

[target."cfg(target_arch = \"wasm32\")".dependencies.wasm_bindgen]
package = "wasm-bindgen"
version = "0.2.87"

[target."cfg(target_arch = \"wasm32\")".dependencies.web_sys]
package = "web-sys"
version = "0.3.64"
features = [
         "Element",
         "Window",
         "console",
         "CssStyleDeclaration",
         "Document",
         "HtmlDocument",
         "Response",
         "HtmlElement",
         "HtmlTextAreaElement",
         "Text",
         "MouseEvent",
         "PointerEvent",
         "Event",
         "EventTarget",
         "DomRect",
         "Storage",
         "RequestInit",
         "RequestCache",
]

[target."cfg(target_arch = \"wasm32\")".dependencies.js_sys]
package = "js-sys"
version = "0.3.64"

[target."cfg(target_arch = \"wasm32\")".dependencies.console_error_panic_hook]
version = "0.1.7"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.gettextrs]
package = "gettext-rs"
version = "0.7.0"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.libc]
version = "0.2.147"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.ncurses]
version = "5.101.0"
features = ["wide"]

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.rand]
version = "0.8.5"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.chrono]
version = "0.4.31"
